IJAI-955 compute the launch files of a product from a context-free model
The `platform_resources` fragment starts a JVM and loads the full project
model tree to write four small files: `build.txt`, `bin/idea.properties`,
the vmoptions file and `bin/product-info.json`. All four follow from the
product properties, the application info and a few checkout files. A
`BuildContext` is not needed.

`ProductLaunchModel` states those facts for every OS and architecture.
`computeProductLaunchModel` derives it with no build context, and
`renderProductLaunchFiles` turns it into the four files of one platform.
The Go tool `product-files` renders the same files from the JSON of the
model. The dev distribution does not use either renderer yet.

`DevDistProductLaunchModelTest` is the oracle. For every split product
and every host platform, it compares three renderings: the production
writers over the build context that the fragment creates, the Kotlin
renderer, and the Go tool. All four files of all products on all six
platforms are byte-identical. The test also counts the compared files, so
it cannot pass by comparing nothing.

Production shares the facts:
- `getAdditionalJvmArguments` of the build context now renders through
  `renderAdditionalJvmArguments`, so the JVM argument rules exist once in
  Kotlin, beside the Go port.
- The vmoptions additions of each OS, the `idea.properties` parts, the
  Linux frame class, the frontend icon check and the constants of the
  IJ Light and stdio MCP commands are shared functions.
- The four hooks that took a `BuildContext` for no reason take plain
  values: `getProductFlavors()`, the base-product application info for
  the context-dependent JVM arguments, the build number for the Qodana
  VM options, and a `launcherCustomCommands` flag instead of the
  customizer that only the language servers set, to drop all commands.

`AllProductsPackagingTest` passes, 85 of 85.

GitOrigin-RevId: 4196cedd431137e112ae1924e2fee11337b2cb58